parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    CONST_VALOR
    DO
    ELSE
    EQUAL
    GREATER_THAN
    GREATER_THAN_OR_EQUAL
    IF
    LESS_THAN
    LESS_THAN_OR_EQUAL
    NOT_EQUAL_TO
    READ
    THEN
    WHILE
    WRITE

Grammar

Rule 0     S' -> lista_comandos
Rule 1     lista_comandos -> lista_comandos comando
Rule 2     lista_comandos -> empty
Rule 3     comando -> declaracao_var_block
Rule 4     comando -> atribuicao
Rule 5     comando -> function_declaration
Rule 6     comando -> return_statement
Rule 7     comando -> type_declaration_block
Rule 8     type_declaration_block -> TYPE type_definition_list
Rule 9     type_definition_list -> type_definition_list single_type_definition
Rule 10    type_definition_list -> single_type_definition
Rule 11    single_type_definition -> ID EQUAL_TO type_definition SEMI
Rule 12    type_definition -> array_type_definition
Rule 13    type_definition -> record_type_definition
Rule 14    declaracao_var_block -> VAR var_declaration_list
Rule 15    var_declaration_list -> var_declaration_list declaracao_var
Rule 16    var_declaration_list -> declaracao_var
Rule 17    declaracao_var -> ID COLON tipo_specifier SEMI
Rule 18    array_type_definition -> ARRAY LBRACKET NUMERO RBRACKET OF tipo_specifier
Rule 19    record_type_definition -> RECORD field_list END SEMI
Rule 20    field_list -> field_list field_declaration
Rule 21    field_list -> empty
Rule 22    field_declaration -> ID COLON tipo_specifier SEMI
Rule 23    tipo_specifier -> INTEGER
Rule 24    tipo_specifier -> REAL
Rule 25    tipo_specifier -> STRING
Rule 26    tipo_specifier -> ID
Rule 27    atribuicao -> Variavel ATRIB expressao SEMI
Rule 28    function_declaration -> DEF ID LPAREN params_opt RPAREN tipo_retorno_opt function_body
Rule 29    function_body -> var_declarations_opt BEGIN lista_comandos END SEMI
Rule 30    var_declarations_opt -> VAR var_declaration_list
Rule 31    var_declarations_opt -> empty
Rule 32    return_statement -> RETURN expressao SEMI
Rule 33    params_opt -> params
Rule 34    params_opt -> empty
Rule 35    params -> params COMMA param
Rule 36    params -> param
Rule 37    param -> ID COLON tipo_specifier
Rule 38    tipo_retorno_opt -> COLON COLON tipo_specifier
Rule 39    tipo_retorno_opt -> empty
Rule 40    expressao -> expressao PLUS expressao
Rule 41    expressao -> expressao MINUS expressao
Rule 42    expressao -> expressao TIMES expressao
Rule 43    expressao -> expressao DIVIDE expressao
Rule 44    expressao -> termo
Rule 45    termo -> LPAREN expressao RPAREN
Rule 46    termo -> NUMERO
Rule 47    termo -> function_call
Rule 48    termo -> Variavel
Rule 49    Variavel -> ID
Rule 50    Variavel -> array_access
Rule 51    Variavel -> record_access
Rule 52    record_access -> Variavel DOT ID
Rule 53    array_access -> ID LBRACKET expressao RBRACKET
Rule 54    function_call -> ID LPAREN args_opt RPAREN
Rule 55    args_opt -> args
Rule 56    args_opt -> empty
Rule 57    args -> args COMMA expressao
Rule 58    args -> expressao
Rule 59    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 18
ATRIB                : 27
BEGIN                : 29
COLON                : 17 22 37 38 38
COMMA                : 35 57
CONST                : 
CONST_VALOR          : 
DEF                  : 28
DIVIDE               : 43
DO                   : 
DOT                  : 52
ELSE                 : 
END                  : 19 29
EQUAL                : 
EQUAL_TO             : 11
GREATER_THAN         : 
GREATER_THAN_OR_EQUAL : 
ID                   : 11 17 22 26 28 37 49 52 53 54
IF                   : 
INTEGER              : 23
LBRACKET             : 18 53
LESS_THAN            : 
LESS_THAN_OR_EQUAL   : 
LPAREN               : 28 45 54
MINUS                : 41
NOT_EQUAL_TO         : 
NUMERO               : 18 46
OF                   : 18
PLUS                 : 40
RBRACKET             : 18 53
READ                 : 
REAL                 : 24
RECORD               : 19
RETURN               : 32
RPAREN               : 28 45 54
SEMI                 : 11 17 19 22 27 29 32
STRING               : 25
THEN                 : 
TIMES                : 42
TYPE                 : 8
VAR                  : 14 30
WHILE                : 
WRITE                : 
error                : 

Nonterminals, with rules where they appear

Variavel             : 27 48 52
args                 : 55 57
args_opt             : 54
array_access         : 50
array_type_definition : 12
atribuicao           : 4
comando              : 1
declaracao_var       : 15 16
declaracao_var_block : 3
empty                : 2 21 31 34 39 56
expressao            : 27 32 40 40 41 41 42 42 43 43 45 53 57 58
field_declaration    : 20
field_list           : 19 20
function_body        : 28
function_call        : 47
function_declaration : 5
lista_comandos       : 1 29 0
param                : 35 36
params               : 33 35
params_opt           : 28
record_access        : 51
record_type_definition : 13
return_statement     : 6
single_type_definition : 9 10
termo                : 44
tipo_retorno_opt     : 28
tipo_specifier       : 17 18 22 37 38
type_declaration_block : 7
type_definition      : 11
type_definition_list : 8 9
var_declaration_list : 14 15 30
var_declarations_opt : 29

Parsing method: LALR

state 0

    (0) S' -> . lista_comandos
    (1) lista_comandos -> . lista_comandos comando
    (2) lista_comandos -> . empty
    (59) empty -> .

    VAR             reduce using rule 59 (empty -> .)
    DEF             reduce using rule 59 (empty -> .)
    RETURN          reduce using rule 59 (empty -> .)
    TYPE            reduce using rule 59 (empty -> .)
    ID              reduce using rule 59 (empty -> .)
    $end            reduce using rule 59 (empty -> .)

    lista_comandos                 shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> lista_comandos .
    (1) lista_comandos -> lista_comandos . comando
    (3) comando -> . declaracao_var_block
    (4) comando -> . atribuicao
    (5) comando -> . function_declaration
    (6) comando -> . return_statement
    (7) comando -> . type_declaration_block
    (14) declaracao_var_block -> . VAR var_declaration_list
    (27) atribuicao -> . Variavel ATRIB expressao SEMI
    (28) function_declaration -> . DEF ID LPAREN params_opt RPAREN tipo_retorno_opt function_body
    (32) return_statement -> . RETURN expressao SEMI
    (8) type_declaration_block -> . TYPE type_definition_list
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    VAR             shift and go to state 9
    DEF             shift and go to state 11
    RETURN          shift and go to state 13
    TYPE            shift and go to state 14
    ID              shift and go to state 12

    comando                        shift and go to state 3
    declaracao_var_block           shift and go to state 4
    atribuicao                     shift and go to state 5
    function_declaration           shift and go to state 6
    return_statement               shift and go to state 7
    type_declaration_block         shift and go to state 8
    Variavel                       shift and go to state 10
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 2

    (2) lista_comandos -> empty .

    VAR             reduce using rule 2 (lista_comandos -> empty .)
    DEF             reduce using rule 2 (lista_comandos -> empty .)
    RETURN          reduce using rule 2 (lista_comandos -> empty .)
    TYPE            reduce using rule 2 (lista_comandos -> empty .)
    ID              reduce using rule 2 (lista_comandos -> empty .)
    $end            reduce using rule 2 (lista_comandos -> empty .)
    END             reduce using rule 2 (lista_comandos -> empty .)


state 3

    (1) lista_comandos -> lista_comandos comando .

    VAR             reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    DEF             reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    RETURN          reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    TYPE            reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    ID              reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    $end            reduce using rule 1 (lista_comandos -> lista_comandos comando .)
    END             reduce using rule 1 (lista_comandos -> lista_comandos comando .)


state 4

    (3) comando -> declaracao_var_block .

    VAR             reduce using rule 3 (comando -> declaracao_var_block .)
    DEF             reduce using rule 3 (comando -> declaracao_var_block .)
    RETURN          reduce using rule 3 (comando -> declaracao_var_block .)
    TYPE            reduce using rule 3 (comando -> declaracao_var_block .)
    ID              reduce using rule 3 (comando -> declaracao_var_block .)
    $end            reduce using rule 3 (comando -> declaracao_var_block .)
    END             reduce using rule 3 (comando -> declaracao_var_block .)


state 5

    (4) comando -> atribuicao .

    VAR             reduce using rule 4 (comando -> atribuicao .)
    DEF             reduce using rule 4 (comando -> atribuicao .)
    RETURN          reduce using rule 4 (comando -> atribuicao .)
    TYPE            reduce using rule 4 (comando -> atribuicao .)
    ID              reduce using rule 4 (comando -> atribuicao .)
    $end            reduce using rule 4 (comando -> atribuicao .)
    END             reduce using rule 4 (comando -> atribuicao .)


state 6

    (5) comando -> function_declaration .

    VAR             reduce using rule 5 (comando -> function_declaration .)
    DEF             reduce using rule 5 (comando -> function_declaration .)
    RETURN          reduce using rule 5 (comando -> function_declaration .)
    TYPE            reduce using rule 5 (comando -> function_declaration .)
    ID              reduce using rule 5 (comando -> function_declaration .)
    $end            reduce using rule 5 (comando -> function_declaration .)
    END             reduce using rule 5 (comando -> function_declaration .)


state 7

    (6) comando -> return_statement .

    VAR             reduce using rule 6 (comando -> return_statement .)
    DEF             reduce using rule 6 (comando -> return_statement .)
    RETURN          reduce using rule 6 (comando -> return_statement .)
    TYPE            reduce using rule 6 (comando -> return_statement .)
    ID              reduce using rule 6 (comando -> return_statement .)
    $end            reduce using rule 6 (comando -> return_statement .)
    END             reduce using rule 6 (comando -> return_statement .)


state 8

    (7) comando -> type_declaration_block .

    VAR             reduce using rule 7 (comando -> type_declaration_block .)
    DEF             reduce using rule 7 (comando -> type_declaration_block .)
    RETURN          reduce using rule 7 (comando -> type_declaration_block .)
    TYPE            reduce using rule 7 (comando -> type_declaration_block .)
    ID              reduce using rule 7 (comando -> type_declaration_block .)
    $end            reduce using rule 7 (comando -> type_declaration_block .)
    END             reduce using rule 7 (comando -> type_declaration_block .)


state 9

    (14) declaracao_var_block -> VAR . var_declaration_list
    (15) var_declaration_list -> . var_declaration_list declaracao_var
    (16) var_declaration_list -> . declaracao_var
    (17) declaracao_var -> . ID COLON tipo_specifier SEMI

    ID              shift and go to state 19

    var_declaration_list           shift and go to state 17
    declaracao_var                 shift and go to state 18

state 10

    (27) atribuicao -> Variavel . ATRIB expressao SEMI
    (52) record_access -> Variavel . DOT ID

    ATRIB           shift and go to state 20
    DOT             shift and go to state 21


state 11

    (28) function_declaration -> DEF . ID LPAREN params_opt RPAREN tipo_retorno_opt function_body

    ID              shift and go to state 22


state 12

    (49) Variavel -> ID .
    (53) array_access -> ID . LBRACKET expressao RBRACKET

    ATRIB           reduce using rule 49 (Variavel -> ID .)
    DOT             reduce using rule 49 (Variavel -> ID .)
    LBRACKET        shift and go to state 23


state 13

    (32) return_statement -> RETURN . expressao SEMI
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 24
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 14

    (8) type_declaration_block -> TYPE . type_definition_list
    (9) type_definition_list -> . type_definition_list single_type_definition
    (10) type_definition_list -> . single_type_definition
    (11) single_type_definition -> . ID EQUAL_TO type_definition SEMI

    ID              shift and go to state 33

    type_definition_list           shift and go to state 31
    single_type_definition         shift and go to state 32

state 15

    (50) Variavel -> array_access .

    ATRIB           reduce using rule 50 (Variavel -> array_access .)
    DOT             reduce using rule 50 (Variavel -> array_access .)
    SEMI            reduce using rule 50 (Variavel -> array_access .)
    PLUS            reduce using rule 50 (Variavel -> array_access .)
    MINUS           reduce using rule 50 (Variavel -> array_access .)
    TIMES           reduce using rule 50 (Variavel -> array_access .)
    DIVIDE          reduce using rule 50 (Variavel -> array_access .)
    RBRACKET        reduce using rule 50 (Variavel -> array_access .)
    RPAREN          reduce using rule 50 (Variavel -> array_access .)
    COMMA           reduce using rule 50 (Variavel -> array_access .)


state 16

    (51) Variavel -> record_access .

    ATRIB           reduce using rule 51 (Variavel -> record_access .)
    DOT             reduce using rule 51 (Variavel -> record_access .)
    SEMI            reduce using rule 51 (Variavel -> record_access .)
    PLUS            reduce using rule 51 (Variavel -> record_access .)
    MINUS           reduce using rule 51 (Variavel -> record_access .)
    TIMES           reduce using rule 51 (Variavel -> record_access .)
    DIVIDE          reduce using rule 51 (Variavel -> record_access .)
    RBRACKET        reduce using rule 51 (Variavel -> record_access .)
    RPAREN          reduce using rule 51 (Variavel -> record_access .)
    COMMA           reduce using rule 51 (Variavel -> record_access .)


state 17

    (14) declaracao_var_block -> VAR var_declaration_list .
    (15) var_declaration_list -> var_declaration_list . declaracao_var
    (17) declaracao_var -> . ID COLON tipo_specifier SEMI

  ! shift/reduce conflict for ID resolved as shift
    VAR             reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    DEF             reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    RETURN          reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    TYPE            reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    $end            reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    END             reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .)
    ID              shift and go to state 19

  ! ID              [ reduce using rule 14 (declaracao_var_block -> VAR var_declaration_list .) ]

    declaracao_var                 shift and go to state 34

state 18

    (16) var_declaration_list -> declaracao_var .

    ID              reduce using rule 16 (var_declaration_list -> declaracao_var .)
    VAR             reduce using rule 16 (var_declaration_list -> declaracao_var .)
    DEF             reduce using rule 16 (var_declaration_list -> declaracao_var .)
    RETURN          reduce using rule 16 (var_declaration_list -> declaracao_var .)
    TYPE            reduce using rule 16 (var_declaration_list -> declaracao_var .)
    $end            reduce using rule 16 (var_declaration_list -> declaracao_var .)
    END             reduce using rule 16 (var_declaration_list -> declaracao_var .)
    BEGIN           reduce using rule 16 (var_declaration_list -> declaracao_var .)


state 19

    (17) declaracao_var -> ID . COLON tipo_specifier SEMI

    COLON           shift and go to state 35


state 20

    (27) atribuicao -> Variavel ATRIB . expressao SEMI
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    Variavel                       shift and go to state 29
    expressao                      shift and go to state 36
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 21

    (52) record_access -> Variavel DOT . ID

    ID              shift and go to state 37


state 22

    (28) function_declaration -> DEF ID . LPAREN params_opt RPAREN tipo_retorno_opt function_body

    LPAREN          shift and go to state 38


state 23

    (53) array_access -> ID LBRACKET . expressao RBRACKET
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 39
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 24

    (32) return_statement -> RETURN expressao . SEMI
    (40) expressao -> expressao . PLUS expressao
    (41) expressao -> expressao . MINUS expressao
    (42) expressao -> expressao . TIMES expressao
    (43) expressao -> expressao . DIVIDE expressao

    SEMI            shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 43
    DIVIDE          shift and go to state 44


state 25

    (44) expressao -> termo .

    SEMI            reduce using rule 44 (expressao -> termo .)
    PLUS            reduce using rule 44 (expressao -> termo .)
    MINUS           reduce using rule 44 (expressao -> termo .)
    TIMES           reduce using rule 44 (expressao -> termo .)
    DIVIDE          reduce using rule 44 (expressao -> termo .)
    RBRACKET        reduce using rule 44 (expressao -> termo .)
    RPAREN          reduce using rule 44 (expressao -> termo .)
    COMMA           reduce using rule 44 (expressao -> termo .)


state 26

    (45) termo -> LPAREN . expressao RPAREN
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 45
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 27

    (46) termo -> NUMERO .

    SEMI            reduce using rule 46 (termo -> NUMERO .)
    PLUS            reduce using rule 46 (termo -> NUMERO .)
    MINUS           reduce using rule 46 (termo -> NUMERO .)
    TIMES           reduce using rule 46 (termo -> NUMERO .)
    DIVIDE          reduce using rule 46 (termo -> NUMERO .)
    RBRACKET        reduce using rule 46 (termo -> NUMERO .)
    RPAREN          reduce using rule 46 (termo -> NUMERO .)
    COMMA           reduce using rule 46 (termo -> NUMERO .)


state 28

    (47) termo -> function_call .

    SEMI            reduce using rule 47 (termo -> function_call .)
    PLUS            reduce using rule 47 (termo -> function_call .)
    MINUS           reduce using rule 47 (termo -> function_call .)
    TIMES           reduce using rule 47 (termo -> function_call .)
    DIVIDE          reduce using rule 47 (termo -> function_call .)
    RBRACKET        reduce using rule 47 (termo -> function_call .)
    RPAREN          reduce using rule 47 (termo -> function_call .)
    COMMA           reduce using rule 47 (termo -> function_call .)


state 29

    (48) termo -> Variavel .
    (52) record_access -> Variavel . DOT ID

    SEMI            reduce using rule 48 (termo -> Variavel .)
    PLUS            reduce using rule 48 (termo -> Variavel .)
    MINUS           reduce using rule 48 (termo -> Variavel .)
    TIMES           reduce using rule 48 (termo -> Variavel .)
    DIVIDE          reduce using rule 48 (termo -> Variavel .)
    RBRACKET        reduce using rule 48 (termo -> Variavel .)
    RPAREN          reduce using rule 48 (termo -> Variavel .)
    COMMA           reduce using rule 48 (termo -> Variavel .)
    DOT             shift and go to state 21


state 30

    (54) function_call -> ID . LPAREN args_opt RPAREN
    (49) Variavel -> ID .
    (53) array_access -> ID . LBRACKET expressao RBRACKET

    LPAREN          shift and go to state 46
    DOT             reduce using rule 49 (Variavel -> ID .)
    SEMI            reduce using rule 49 (Variavel -> ID .)
    PLUS            reduce using rule 49 (Variavel -> ID .)
    MINUS           reduce using rule 49 (Variavel -> ID .)
    TIMES           reduce using rule 49 (Variavel -> ID .)
    DIVIDE          reduce using rule 49 (Variavel -> ID .)
    RBRACKET        reduce using rule 49 (Variavel -> ID .)
    RPAREN          reduce using rule 49 (Variavel -> ID .)
    COMMA           reduce using rule 49 (Variavel -> ID .)
    LBRACKET        shift and go to state 23


state 31

    (8) type_declaration_block -> TYPE type_definition_list .
    (9) type_definition_list -> type_definition_list . single_type_definition
    (11) single_type_definition -> . ID EQUAL_TO type_definition SEMI

  ! shift/reduce conflict for ID resolved as shift
    VAR             reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    DEF             reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    RETURN          reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    TYPE            reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    $end            reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    END             reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .)
    ID              shift and go to state 33

  ! ID              [ reduce using rule 8 (type_declaration_block -> TYPE type_definition_list .) ]

    single_type_definition         shift and go to state 47

state 32

    (10) type_definition_list -> single_type_definition .

    ID              reduce using rule 10 (type_definition_list -> single_type_definition .)
    VAR             reduce using rule 10 (type_definition_list -> single_type_definition .)
    DEF             reduce using rule 10 (type_definition_list -> single_type_definition .)
    RETURN          reduce using rule 10 (type_definition_list -> single_type_definition .)
    TYPE            reduce using rule 10 (type_definition_list -> single_type_definition .)
    $end            reduce using rule 10 (type_definition_list -> single_type_definition .)
    END             reduce using rule 10 (type_definition_list -> single_type_definition .)


state 33

    (11) single_type_definition -> ID . EQUAL_TO type_definition SEMI

    EQUAL_TO        shift and go to state 48


state 34

    (15) var_declaration_list -> var_declaration_list declaracao_var .

    ID              reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    VAR             reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    DEF             reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    RETURN          reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    TYPE            reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    $end            reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    END             reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)
    BEGIN           reduce using rule 15 (var_declaration_list -> var_declaration_list declaracao_var .)


state 35

    (17) declaracao_var -> ID COLON . tipo_specifier SEMI
    (23) tipo_specifier -> . INTEGER
    (24) tipo_specifier -> . REAL
    (25) tipo_specifier -> . STRING
    (26) tipo_specifier -> . ID

    INTEGER         shift and go to state 51
    REAL            shift and go to state 52
    STRING          shift and go to state 53
    ID              shift and go to state 49

    tipo_specifier                 shift and go to state 50

state 36

    (27) atribuicao -> Variavel ATRIB expressao . SEMI
    (40) expressao -> expressao . PLUS expressao
    (41) expressao -> expressao . MINUS expressao
    (42) expressao -> expressao . TIMES expressao
    (43) expressao -> expressao . DIVIDE expressao

    SEMI            shift and go to state 54
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 43
    DIVIDE          shift and go to state 44


state 37

    (52) record_access -> Variavel DOT ID .

    ATRIB           reduce using rule 52 (record_access -> Variavel DOT ID .)
    DOT             reduce using rule 52 (record_access -> Variavel DOT ID .)
    SEMI            reduce using rule 52 (record_access -> Variavel DOT ID .)
    PLUS            reduce using rule 52 (record_access -> Variavel DOT ID .)
    MINUS           reduce using rule 52 (record_access -> Variavel DOT ID .)
    TIMES           reduce using rule 52 (record_access -> Variavel DOT ID .)
    DIVIDE          reduce using rule 52 (record_access -> Variavel DOT ID .)
    RBRACKET        reduce using rule 52 (record_access -> Variavel DOT ID .)
    RPAREN          reduce using rule 52 (record_access -> Variavel DOT ID .)
    COMMA           reduce using rule 52 (record_access -> Variavel DOT ID .)


state 38

    (28) function_declaration -> DEF ID LPAREN . params_opt RPAREN tipo_retorno_opt function_body
    (33) params_opt -> . params
    (34) params_opt -> . empty
    (35) params -> . params COMMA param
    (36) params -> . param
    (59) empty -> .
    (37) param -> . ID COLON tipo_specifier

    RPAREN          reduce using rule 59 (empty -> .)
    ID              shift and go to state 55

    params_opt                     shift and go to state 56
    params                         shift and go to state 57
    empty                          shift and go to state 58
    param                          shift and go to state 59

state 39

    (53) array_access -> ID LBRACKET expressao . RBRACKET
    (40) expressao -> expressao . PLUS expressao
    (41) expressao -> expressao . MINUS expressao
    (42) expressao -> expressao . TIMES expressao
    (43) expressao -> expressao . DIVIDE expressao

    RBRACKET        shift and go to state 60
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 43
    DIVIDE          shift and go to state 44


state 40

    (32) return_statement -> RETURN expressao SEMI .

    VAR             reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    DEF             reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    RETURN          reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    TYPE            reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    ID              reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    $end            reduce using rule 32 (return_statement -> RETURN expressao SEMI .)
    END             reduce using rule 32 (return_statement -> RETURN expressao SEMI .)


state 41

    (40) expressao -> expressao PLUS . expressao
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 61
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 42

    (41) expressao -> expressao MINUS . expressao
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 62
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 43

    (42) expressao -> expressao TIMES . expressao
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 63
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 44

    (43) expressao -> expressao DIVIDE . expressao
    (40) expressao -> . expressao PLUS expressao
    (41) expressao -> . expressao MINUS expressao
    (42) expressao -> . expressao TIMES expressao
    (43) expressao -> . expressao DIVIDE expressao
    (44) expressao -> . termo
    (45) termo -> . LPAREN expressao RPAREN
    (46) termo -> . NUMERO
    (47) termo -> . function_call
    (48) termo -> . Variavel
    (54) function_call -> . ID LPAREN args_opt RPAREN
    (49) Variavel -> . ID
    (50) Variavel -> . array_access
    (51) Variavel -> . record_access
    (53) array_access -> . ID LBRACKET expressao RBRACKET
    (52) record_access -> . Variavel DOT ID

    LPAREN          shift and go to state 26
    NUMERO          shift and go to state 27
    ID              shift and go to state 30

    expressao                      shift and go to state 64
    termo                          shift and go to state 25
    function_call                  shift and go to state 28
    Variavel                       shift and go to state 29
    array_access                   shift and go to state 15
    record_access                  shift and go to state 16

state 45

    (45) termo -> LPAREN expressao . RPAREN
    (40) expressao -> expressao . PLUS expressao
    (41) expressao -> expressao . MINUS expressao
    (42) expressao -> expressao . TIMES expressao
    (43) expressao -> expressao . DIVIDE expressao

    RPAREN          shift and go to state 65
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 43
    DIVIDE          shift and go to state 44


state 46
